[gd_scene load_steps=16 format=3 uid="uid://b0mjo4dhgje80"]

[ext_resource type="Script" path="res://Scripts/melee_enemy.gd" id="1_n7t5b"]
[ext_resource type="Script" path="res://Scripts/hitbox.gd" id="3_5harx"]
[ext_resource type="Texture2D" uid="uid://bak5wgw6f2hoh" path="res://Entities/melee_enemy.png" id="3_m77jv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c4lu8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_syix7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6n134"]
radius = 14.0538
height = 40.9903

[sub_resource type="AtlasTexture" id="AtlasTexture_n0i5v"]
atlas = ExtResource("3_m77jv")
region = Rect2(0, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owa0e"]
atlas = ExtResource("3_m77jv")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i4a8"]
atlas = ExtResource("3_m77jv")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wif4e"]
atlas = ExtResource("3_m77jv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfat5"]
atlas = ExtResource("3_m77jv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iobq4"]
atlas = ExtResource("3_m77jv")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_spd71"]
atlas = ExtResource("3_m77jv")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u68b"]
atlas = ExtResource("3_m77jv")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7ohu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0i5v")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owa0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i4a8")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wif4e")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfat5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iobq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spd71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u68b")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="melee_enemy" type="CharacterBody2D"]
collision_layer = 256
script = ExtResource("1_n7t5b")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
scale = Vector2(1.50876, 1.50876)
shape = SubResource("CircleShape2D_c4lu8")

[node name="AttackDetectionRange" type="Area2D" parent="."]
position = Vector2(0, -28)
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionRange"]
position = Vector2(0, -3.8147e-06)
scale = Vector2(11.4442, 11.4442)
shape = SubResource("CircleShape2D_syix7")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(0, -28)
collision_layer = 272
collision_mask = 8
script = ExtResource("3_5harx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1.70772, 1.70772)
shape = SubResource("CapsuleShape2D_6n134")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -43)
scale = Vector2(5.31, 5.31)
texture = ExtResource("3_m77jv")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-1, 0)
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, -980)
initial_velocity_min = 15.0
initial_velocity_max = 90.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.929366, 0, 0.15816, 1)

[node name="AttackChargeUp" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -43)
scale = Vector2(5.31, 5.31)
sprite_frames = SubResource("SpriteFrames_f7ohu")
animation = &"charge"

[connection signal="body_entered" from="AttackDetectionRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackDetectionRange" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackChargeUp" to="." method="_on_attack_charge_up_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
